Updated readData from excel with sheetname

--- a/src/main/resources/Environment.properties
+++ b/src/main/resources/Environment.properties
@@ -1,4 +1,4 @@
-url:https://www.google.com
-username:myusername
-password:mypassword
+url:https://www.yoururl.com
+username:urusename
+password:urpassword
 browser:chrome
